delete an a in data analyst

--- a/about/index.html
+++ b/about/index.html
@@ -38,7 +38,7 @@
 <meta property="og:url" content="https://alanspace.github.io/Alan_Portfolio_advanced/about/" />
 
 <meta itemprop="name" content="About">
-<meta itemprop="description" content="Hello, my name is Alan Leung. I&#39;m a teacher, quantum researcher, programmer and a data analyst.">
+<meta itemprop="description" content="Hello, my name is Alan Leung. I&#39;m a teacher, quantum researcher, programmer and data analyst.">
 <meta name="twitter:card" content="summary"/>
 <meta name="twitter:title" content="About"/>
 <meta name="twitter:description" content="Hello, my name is Alan Leung. I&#39;m a teacher, quantum researcher, programmer and a data analyst."/>
