--- a/about/index.html
+++ b/about/index.html
@@ -33,7 +33,7 @@
     
     
     <meta property="og:title" content="About" />
-<meta property="og:description" content="Hello, my name is Alan Leung. I&#39;m a teacher, quantum researcher, programmer and a data analyst." />
+<meta property="og:description" content="Hello, my name is Alan Leung. I&#39;m a teacher, quantum researcher, programmer and data analyst." />
 <meta property="og:type" content="website" />
 <meta property="og:url" content="https://alanspace.github.io/Alan_Portfolio_advanced/about/" />
 
@@ -41,7 +41,7 @@
 <meta itemprop="description" content="Hello, my name is Alan Leung. I&#39;m a teacher, quantum researcher, programmer and data analyst.">
 <meta name="twitter:card" content="summary"/>
 <meta name="twitter:title" content="About"/>
-<meta name="twitter:description" content="Hello, my name is Alan Leung. I&#39;m a teacher, quantum researcher, programmer and a data analyst."/>
+<meta name="twitter:description" content="Hello, my name is Alan Leung. I&#39;m a teacher, quantum researcher, programmer and data analyst."/>
 
 	
   </head>
