--- a/about/index.html
+++ b/about/index.html
@@ -193,7 +193,7 @@
         </figcaption>
 </figure>
 
-<p>Alan Leung Shek Lun is a teacher, researcher, programmer, data analyst. He is an energetic person, who likes learning and thinking, sharing his insights with others. He has been finding more and more meaningful way to spread great idea with others.</p>
+<p>Alan Leung Shek Lun is a teacher, engineer, researcher, programmer, data analyst. He is an energetic person, who likes learning and thinking, sharing his insights with others. He has been finding more and more meaningful way to spread great idea with others.</p>
 <p>He is now a passionate quantum computing researcher and software developer with 3 years teaching experience in Physics and Math. The education goal is to ignite students' talents and facilitate learning with tech. Research interests are <em>Quantum Machine Learning</em>, <em>Quantum Information Theory</em> and <em>Quantum Networks</em>.</p>
 <figure>
     <img src="https://alanspace.github.io/Alan_Portfolio_advanced/images/about/advocate.png"/> 
