--- a/about/index.html
+++ b/about/index.html
@@ -24,7 +24,7 @@
     
     
     <meta property="og:title" content="About" />
-<meta property="og:description" content="Hello, my name is Alan Leung. I&#39;m a teacher, quantum researcher, programmer and a data analyst." />
+<meta property="og:description" content="Hello, my name is Alan Leung. I&#39;m a teacher, quantum engineer and researcher, programmer and a data analyst." />
 <meta property="og:type" content="website" />
 <meta property="og:url" content="https://alanspace.github.io/Alan_Portfolio_advanced/about/" />
 
