--- a/about/index.html
+++ b/about/index.html
@@ -29,10 +29,10 @@
 <meta property="og:url" content="https://alanspace.github.io/Alan_Portfolio_advanced/about/" />
 
 <meta itemprop="name" content="About">
-<meta itemprop="description" content="Hello, my name is Alan Leung. I&#39;m a teacher, quantum researcher, programmer and a data analyst.">
+<meta itemprop="description" content="Hello, my name is Alan Leung. I&#39;m a teacher, quantum engineer and researcher, programmer and a data analyst.">
 <meta name="twitter:card" content="summary"/>
 <meta name="twitter:title" content="About"/>
-<meta name="twitter:description" content="Hello, my name is Alan Leung. I&#39;m a teacher, quantum researcher, programmer and a data analyst."/>
+<meta name="twitter:description" content="Hello, my name is Alan Leung. I&#39;m a teacher, quantum engineer and researcher, programmer and a data analyst."/>
 
 	
   </head>
@@ -176,7 +176,7 @@
         </h1>
         
           <h2 class="fw1 f5 f3-l white-80 measure-wide-l center mt3">
-            Hello, my name is Alan Leung. I&#39;m a teacher, quantum researcher, programmer and a data analyst.
+            Hello, my name is Alan Leung. I&#39;m a teacher, quantum engineer and researcher, programmer and a data analyst.
           </h2>
         
       </div>
